--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>English Word Guess Game</title>
+  <title>Hannah English Course</title>
 
   <!-- Firebase (v8.x) -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -80,6 +80,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      background: rgba(255, 255, 255, 0.8); /* Container transparente */
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
     #top-controls {
       display: flex;
@@ -144,31 +148,35 @@
     .attempt-row {
       display: flex;
       align-items: center;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
       gap: 5px;
-      flex-wrap: wrap;
+      width: 100%;
       justify-content: center;
     }
     .letter-block {
       width: 45px;
       height: 45px;
       background-color: #cfd8dc;
-      border: 1px solid #999;
+      border: 2px solid #999;
       border-radius: 4px;
       font-weight: bold;
-      font-size: 18px;
+      font-size: 1rem;
       text-transform: uppercase;
       display: flex;
       justify-content: center;
       align-items: center;
       color: #000;
       cursor: pointer; /* para indicar que é clicável */
+      box-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+      transition: background-color 0.3s, border-color 0.3s;
     }
     .player-name {
-      font-size: 14px;
-      margin-left: 6px;
+      font-size: 1rem;
+      margin-left: 10px;
       font-style: italic;
       color: #666;
+      min-width: 100px; /* Definir largura mínima para alinhamento */
+      text-align: left;
     }
 
     /* CAMPO DE TEXTO VISÍVEL */
@@ -197,6 +205,30 @@
       font-weight: bold;
       cursor: pointer;
       font-size: 1rem;
+      box-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+      transition: background-color 0.3s;
+    }
+    #try-button:hover {
+      background-color: #43a047;
+    }
+
+    /* BOTÃO INVITE FRIENDS PRINCIPAL */
+    #invite-button-main {
+      display: block;
+      margin: 10px 0;
+      padding: 8px 14px;
+      border: none;
+      background-color: #ff9800;
+      color: #fff;
+      border-radius: 4px;
+      font-weight: bold;
+      cursor: pointer;
+      font-size: 1rem;
+      box-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+      transition: background-color 0.3s;
+    }
+    #invite-button-main:hover {
+      background-color: #fb8c00;
     }
 
     /* BOTÃO BACK */
@@ -211,9 +243,27 @@
       cursor: pointer;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
       font-size: 1rem;
+      transition: background-color 0.3s;
     }
     #back-button:hover {
       background-color: #333;
+    }
+
+    /* CORES DE FEEDBACK */
+    .green {
+      background-color: #66bb6a;
+      color: #fff;
+      border-color: #43a047;
+    }
+    .yellow {
+      background-color: #ffeb3b;
+      color: #000;
+      border-color: #fdd835;
+    }
+    .red {
+      background-color: #f44336;
+      color: #fff;
+      border-color: #e53935;
     }
 
     /* SCOREBOARD (NO FINAL) */
@@ -232,6 +282,8 @@
     #scoreboard-section h3 {
       margin-bottom: 8px;
       text-align: center;
+      font-size: 1.5rem;
+      color: #333;
     }
     #score-list {
       list-style: none;
@@ -241,10 +293,11 @@
     }
     #score-list li {
       border-bottom: 1px solid #eee;
-      padding: 4px 0;
+      padding: 8px 0;
       display: flex;
       justify-content: space-between;
-      font-size: 14px;
+      font-size: 1rem;
+      align-items: center;
     }
     #score-list li span {
       font-weight: bold;
@@ -272,6 +325,10 @@
       max-width: 200px;
       height: auto;
       cursor: pointer;
+      transition: transform 0.3s;
+    }
+    .invite-image:hover {
+      transform: scale(1.05);
     }
 
     /* RESPONSIVIDADE - até 768px */
@@ -299,7 +356,7 @@
       .letter-block {
         width: 35px;
         height: 35px;
-        font-size: 14px;
+        font-size: 0.9rem;
       }
       #try-button, #start-game, #rules-button, #invite-button-main, #back-button {
         font-size: 0.9rem;
@@ -311,23 +368,9 @@
       #board, #scoreboard-section, #main-content {
         max-width: 100%;
       }
-    }
-
-    /* BOTÃO INVITE FRIENDS PRINCIPAL */
-    #invite-button-main {
-      display: block;
-      margin: 10px 0;
-      padding: 8px 14px;
-      border: none;
-      background-color: #ff9800;
-      color: #fff;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-    #invite-button-main:hover {
-      background-color: #fb8c00;
+      .player-name {
+        min-width: 80px; /* Ajuste para telas menores */
+      }
     }
   </style>
 </head>
