--- a/game.html
+++ b/game.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Meta Tag de Viewport para Responsividade -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Hannah English Course</title>
 
   <!-- Firebase (v8.x) -->
@@ -217,40 +218,43 @@
       font-family: Arial, sans-serif;
     }
 
-    /* BOTÃO TRY */
-    #try-button {
+    /* BOTÕES */
+    #try-button,
+    #login-button,
+    #invite-button-main {
       display: block;
       margin: 10px 0;
       padding: 12px 20px;
       border: none;
-      background-color: #4caf50;
-      color: #fff;
       border-radius: 8px;
       font-weight: bold;
       cursor: pointer;
       font-size: 1.2rem;
       box-shadow: 2px 2px 4px rgba(0,0,0,0.1);
       transition: background-color 0.3s;
+    }
+
+    #try-button {
+      background-color: #4caf50;
+      color: #fff;
     }
 
     #try-button:hover {
       background-color: #43a047;
     }
 
-    /* BOTÃO INVITE FRIENDS PRINCIPAL */
+    #login-button {
+      background-color: #2196F3;
+      color: #fff;
+    }
+
+    #login-button:hover {
+      background-color: #1976D2;
+    }
+
     #invite-button-main {
-      display: block;
-      margin: 10px 0;
-      padding: 12px 20px;
-      border: none;
       background-color: #ff9800;
       color: #fff;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      font-size: 1.2rem;
-      box-shadow: 2px 2px 4px rgba(0,0,0,0.1);
-      transition: background-color 0.3s;
     }
 
     #invite-button-main:hover {
@@ -428,7 +432,10 @@
         font-size: 1rem;
       }
 
-      #try-button, #start-game, #rules-button, #invite-button-main, #back-button {
+      #try-button,
+      #login-button,
+      #invite-button-main,
+      #back-button {
         font-size: 1rem;
         padding: 10px 16px;
       }
@@ -490,6 +497,8 @@
       placeholder="Type a word of X letters"
     >
     <button id="try-button">Try</button>
+    <!-- Botão de Login Adicionado Aqui -->
+    <button id="login-button">Login</button>
     <button id="invite-button-main">Invite Friends</button>
   </div>
 
@@ -564,6 +573,7 @@
     const robotBalloon     = document.getElementById("robot-balloon");
     const backButton       = document.getElementById("back-button");
     const inviteButtonMain = document.getElementById("invite-button-main");
+    const loginButton      = document.getElementById("login-button");
 
     /*******************************************************
      * 3) CARREGAR O DICIONÁRIO
@@ -937,7 +947,14 @@
     });
 
     /*******************************************************
-     * 18) SUBMETER TENTATIVA
+     * 18) BOTÃO LOGIN
+     *******************************************************/
+    loginButton.addEventListener("click", () => {
+      window.location.href = "https://hannahenglishcourse.vercel.app/Formulario/login.html";
+    });
+
+    /*******************************************************
+     * 19) SUBMETER TENTATIVA
      *******************************************************/
     async function submitCurrentRow() {
       const guessClean = hiddenInput.value.trim().toLowerCase();
@@ -994,7 +1011,7 @@
     }
 
     /*******************************************************
-     * 19) FEEDBACK (green, yellow, red)
+     * 20) FEEDBACK (green, yellow, red)
      *******************************************************/
     function getFeedback(guess, realWord) {
       const feedback = Array(guess.length).fill("red");
@@ -1020,7 +1037,7 @@
     }
 
     /*******************************************************
-     * 20) DEFINIÇÃO
+     * 21) DEFINIÇÃO
      *******************************************************/
     async function getDefinition(word) {
       try {
@@ -1034,7 +1051,7 @@
     }
 
     /*******************************************************
-     * 21) MOSTRAR PONTOS & CONTADOR PARTIDAS
+     * 22) MOSTRAR PONTOS & CONTADOR PARTIDAS
      *******************************************************/
     function showPersonalScore() {
       const personalScoreSection = document.getElementById("personal-score-section");
