--- a/game.html
+++ b/game.html
@@ -246,6 +246,7 @@
     #login-button {
       background-color: #2196F3;
       color: #fff;
+      display: none; /* Inicialmente oculto */
     }
 
     #login-button:hover {
@@ -670,6 +671,7 @@
       listenGameState();
       showPersonalScore();
       updatePlayerScoreDisplay();
+      updateLoginButtonVisibility(); // Atualiza a visibilidade do botão de login
     });
 
     /*******************************************************
@@ -1063,6 +1065,17 @@
         document.getElementById("personalScore").textContent = totalPoints;
       } else {
         personalScoreSection.style.display = "none";
+      }
+    }
+
+    /*******************************************************
+     * 23) ATUALIZAR VISIBILIDADE DO BOTÃO DE LOGIN
+     *******************************************************/
+    function updateLoginButtonVisibility() {
+      if (isGuest) {
+        loginButton.style.display = "block";
+      } else {
+        loginButton.style.display = "none";
       }
     }
   </script>
