--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <!-- Meta Tag de Viewport para Responsividade -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Hannah English Course</title>
+  <title>Hannah Games</title>
 
   <!-- Firebase (v8.x) -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
