--- a/game.html
+++ b/game.html
@@ -464,7 +464,7 @@
 
   <!-- HEADER COM TÍTULO -->
   <header>
-    <h1>Hannah English Course</h1>
+    <h1>Hannah Games</h1>
   </header>
 
   <!-- SEÇÃO DO ROBÔ -->
@@ -938,7 +938,7 @@
       const shareData = {
         title: "Hannah English Course",
         text: "Come play this English word game with me!",
-        url: "https://hannahenglishcourse.vercel.app/"
+        url: "https://hannahenglishcourse.vercel.app/game.html"
       };
       if (navigator.share) {
         navigator.share(shareData).catch(() => {});
