--- a/game.html
+++ b/game.html
@@ -44,6 +44,14 @@
       text-shadow: 2px 2px #888;
     }
 
+#subtitle {
+  font-size: 0.9rem;
+  color: #000;
+  margin-top: 5px;
+  text-align: center;
+  font-style: italic;
+}
+
     /* SEÇÃO DO ROBÔ */
     #robot-section {
       text-align: center;
@@ -465,6 +473,7 @@
   <!-- HEADER COM TÍTULO -->
   <header>
     <h1>Hannah Games</h1>
+    <p id="subtitle">Brought to you by Hannah English Course</p>
   </header>
 
   <!-- SEÇÃO DO ROBÔ -->
