--- a/game.html
+++ b/game.html
@@ -44,12 +44,15 @@
       text-shadow: 2px 2px #888;
     }
 
-#subtitle {
+#subtitle a {
   font-size: 0.9rem;
   color: #000;
-  margin-top: 5px;
-  text-align: center;
+  text-decoration: none; /* Remove o sublinhado */
   font-style: italic;
+}
+
+#subtitle a:hover {
+  text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
 }
 
     /* SEÇÃO DO ROBÔ */
@@ -472,8 +475,10 @@
 
   <!-- HEADER COM TÍTULO -->
   <header>
-    <h1>Hannah Games</h1>
-    <p id="subtitle">Brought to you by Hannah English Course</p>
+     <h1>Hannah Games</h1>
+     <p id="subtitle">
+    <a href="https://hannahenglishcourse.vercel.app/" target="_blank">Brought to you by Hannah English Course</a>
+  </p>
   </header>
 
   <!-- SEÇÃO DO ROBÔ -->
