--- a/game.html
+++ b/game.html
@@ -55,6 +55,10 @@
   text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
 }
 
+#subtitle strong {
+  font-weight: bold; /* Garante o negrito */
+}
+
     /* SEÇÃO DO ROBÔ */
     #robot-section {
       text-align: center;
@@ -475,9 +479,9 @@
 
   <!-- HEADER COM TÍTULO -->
   <header>
-     <h1>Hannah Games</h1>
-     <p id="subtitle">
-    <a href="https://hannahenglishcourse.vercel.app/" target="_blank">Brought to you by Hannah English Course</a>
+   <h1>Hannah Games</h1>
+  <p id="subtitle">
+    Brought to you by <a href="https://hannahenglishcourse.vercel.app/" target="_blank"><strong>Hannah English Course</strong></a>
   </p>
   </header>
 
