--- a/game.html
+++ b/game.html
@@ -59,6 +59,14 @@
   font-weight: bold; /* Garante o negrito */
 }
 
+#game-title {
+  font-size: 1.8rem;
+  color: #333;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
     /* SEÇÃO DO ROBÔ */
     #robot-section {
       text-align: center;
@@ -494,15 +502,17 @@
   <!-- ÁREA PRINCIPAL (O JOGO) -->
   <div id="main-content">
     <div id="top-controls">
-      <label for="difficulty-select">Difficulty:</label>
-      <select id="difficulty-select">
-        <option value="easy">Easy</option>
-        <option value="medium">Medium</option>
-        <option value="hard">Hard</option>
-      </select>
-      <button id="start-game">Start Game</button>
-      <button id="rules-button">Rules</button>
-      <span id="player-score-display"></span>
+  <h2 id="game-title">Guess the Word</h2>
+  <label for="difficulty-select">Difficulty:</label>
+  <select id="difficulty-select">
+    <option value="easy">Easy</option>
+    <option value="medium">Medium</option>
+    <option value="hard">Hard</option>
+  </select>
+  <button id="start-game">Start Game</button>
+  <button id="rules-button">Rules</button>
+  <span id="player-score-display"></span>
+</div>
     </div>
 
     <div id="board"></div>
