--- a/game.html
+++ b/game.html
@@ -896,22 +896,27 @@
      * 13) UPDATE UI
      *******************************************************/
     function updateUI() {
-      const startBtn = document.getElementById("start-game");
-      const tryBtn   = document.getElementById("try-button");
+  const startBtn = document.getElementById("start-game");
+  const tryBtn = document.getElementById("try-button");
+  const difficultySelect = document.getElementById("difficulty-select");
 
-      if (currentStatus === "in_progress" && userRole !== "proprietario") {
-        startBtn.disabled = true;
-      } else {
-        startBtn.disabled = false;
-      }
+  // Lógica para o botão Start Game
+  if (currentStatus === "in_progress" && userRole !== "proprietario") {
+    startBtn.disabled = true;
+    difficultySelect.disabled = true; // Desativar seletor de dificuldade
+  } else {
+    startBtn.disabled = false;
+    difficultySelect.disabled = false; // Ativar seletor de dificuldade
+  }
 
-      if (currentStatus === "in_progress") {
-        tryBtn.disabled = false;
-        hiddenInput.focus(); 
-      } else {
-        tryBtn.disabled = true;
-      }
-    }
+  // Lógica para o botão Try
+  if (currentStatus === "in_progress") {
+    tryBtn.disabled = false;
+    hiddenInput.focus(); 
+  } else {
+    tryBtn.disabled = true;
+  }
+}
 
     /*******************************************************
      * 14) INPUT EVENT (PARA MOBILE E DESKTOP)
