--- a/game.html
+++ b/game.html
@@ -190,6 +190,27 @@
   color: #555; /* Cor mais suave */
 }
 
+#input-container {
+  text-align: center; /* Centraliza o conteúdo */
+  margin-top: 15px;   /* Espaço acima do contêiner */
+}
+
+#guess-title {
+  font-size: 1.2rem; /* Tamanho do texto */
+  color: #333;       /* Cor do texto */
+  font-weight: bold; /* Negrito */
+  margin-bottom: 8px; /* Espaço entre o texto e o campo de entrada */
+}
+
+#hidden-input {
+  width: 90%;          /* Largura do campo de entrada */
+  max-width: 300px;    /* Largura máxima */
+  padding: 10px;       /* Espaçamento interno */
+  font-size: 1rem;     /* Tamanho do texto */
+  border: 2px solid #4CAF50; /* Borda estilizada */
+  border-radius: 8px;  /* Cantos arredondados */
+}
+
     /* TABULEIRO */
     #board {
       width: 100%;
@@ -513,7 +534,7 @@
   </div>
 
   <!-- ÁREA PRINCIPAL (O JOGO) -->
-  <div id="main-content">
+<div id="main-content">
   <div id="top-controls">
     <h2 id="game-title">Guess the Word</h2>
     <label for="difficulty-select">Difficulty:</label>
@@ -528,16 +549,23 @@
   </div>
 
   <div id="board"></div>
-  <input 
-    type="text"
-    id="hidden-input"
-    autocomplete="off"
-    autocorrect="off"
-    autocapitalize="none"
-    spellcheck="false"
-    placeholder="Type a word of X letters"
-  >
+  
+  <!-- Texto sobre o campo de entrada -->
+  <div id="input-container">
+    <p id="guess-title"><strong>Guess the Word</strong></p>
+    <input 
+      type="text"
+      id="hidden-input"
+      autocomplete="off"
+      autocorrect="off"
+      autocapitalize="none"
+      spellcheck="false"
+      placeholder="Type a word of X letters"
+    >
+  </div>
+  
   <button id="try-button">Try</button>
+  
   <!-- Botão de Login -->
   <button id="login-button">Login</button>
 
