--- a/game.html
+++ b/game.html
@@ -552,7 +552,7 @@
   
   <!-- Texto sobre o campo de entrada -->
   <div id="input-container">
-    <p id="guess-title"><strong>Guess the Word</strong></p>
+    <p id="guess-title"><strong>Take a guess!</strong></p>
     <input 
       type="text"
       id="hidden-input"
