--- a/game.html
+++ b/game.html
@@ -955,19 +955,26 @@
   const tryBtn = document.getElementById("try-button");
   const difficultySelect = document.getElementById("difficulty-select");
 
-  // Lógica para o botão Start Game
-  if (currentStatus === "in_progress" && userRole !== "proprietario") {
-    startBtn.disabled = true;
-    difficultySelect.disabled = true; // Desativar seletor de dificuldade
-  } else {
+  // Lógica para o botão Start Game e Difficulty Select
+  if (userRole === "proprietario") {
+    // Proprietário sempre pode usar os controles
     startBtn.disabled = false;
-    difficultySelect.disabled = false; // Ativar seletor de dificuldade
+    difficultySelect.disabled = false;
+  } else {
+    // Usuários comuns seguem a lógica padrão
+    if (currentStatus === "in_progress") {
+      startBtn.disabled = true;
+      difficultySelect.disabled = true;
+    } else {
+      startBtn.disabled = false;
+      difficultySelect.disabled = false;
+    }
   }
 
   // Lógica para o botão Try
   if (currentStatus === "in_progress") {
     tryBtn.disabled = false;
-    hiddenInput.focus(); 
+    hiddenInput.focus();
   } else {
     tryBtn.disabled = true;
   }
