--- a/game.html
+++ b/game.html
@@ -881,10 +881,10 @@ async function startGame() {
   const updatedGamesPlayed = currentGamesPlayed + 1;
   await gamesPlayedRef.set(updatedGamesPlayed); // Atualizar no Firebase
 
-  // Mensagem de confirmação para o proprietário
+  /*// Mensagem de confirmação para o proprietário
   if (userUid && userRole === "proprietario") {
     speakText(`This is game number ${updatedGamesPlayed}.`);
-  }
+  }*/
 
   // Reiniciar o jogo
   await db.ref("HannahGames/guessTheWord/currentGame").remove(); // Remove dados do jogo atual
